[package]
name = "ch32v30x-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32v3 = {version = "0.1.1", path = "../ch32-rs-nightlies/ch32v3" }
riscv = "0.8.0"

embedded-hal = { version = "0.2.7", features = ["unproven"] }
# embedded-time = "0.12.0"
fugit = "0.3.5"
vcell = "0.1"
void = { version = "1.0.2", default-features = false }
nb = "1.0"

[features]
default = ["rt"]
rt = ["ch32v3/rt"]
